--- a/app/src/main/res/layout/shop_list.xml
+++ b/app/src/main/res/layout/shop_list.xml
@@ -2,10 +2,9 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/space_small"
-
     app:cardCornerRadius="10dp">
 
 
@@ -20,6 +19,8 @@
             android:layout_height="match_parent"
             android:orientation="horizontal">
 
+
+
             <ImageView
                 android:id="@+id/ivImage"
                 android:layout_width="100dp"
@@ -27,35 +28,22 @@
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="210dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:orientation="horizontal"
-                    android:layout_height="match_parent">
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tv_tittle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/space_default"
-                    android:layout_marginEnd="@dimen/space_default"
-                    android:textColor="@color/design_default_color_primary"
-                    android:textSize="@dimen/text_large"
-                    android:textStyle="bold"
-                    tools:text="Vagabond sack" />
-                    <CheckBox
-                        android:id="@+id/item_product_item_fav"
-                        android:layout_width="50dp"
-                        android:layout_height="50dp"
-                        android:layout_marginEnd="16dp"
-                        android:background="@drawable/selector_fav"
-                        android:button="@null"
-                        android:checked="false"
-                        app:layout_constraintEnd_toStartOf="@+id/button_add"
-                        app:layout_constraintHorizontal_bias="1.0"
-                        />
-                </LinearLayout>
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:id="@+id/tv_tittle"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/space_default"
+                        android:layout_marginEnd="@dimen/space_default"
+                        android:textColor="@color/design_default_color_primary"
+                        android:textSize="@dimen/text_large"
+                        android:textStyle="bold"
+                        tools:text="Vagabond sack" />
+
+
 
 
                 <com.google.android.material.textview.MaterialTextView
@@ -71,7 +59,7 @@
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/tv_category"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_default"
                     android:layout_marginEnd="@dimen/space_default"
@@ -81,8 +69,27 @@
 
 
             </LinearLayout>
+            <CheckBox
+                android:id="@+id/item_product_item_fav"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="end"
+                android:background="@drawable/selector_fav"
+                android:button="@null"
+                android:checked="false"
+                app:layout_constraintHorizontal_bias="1.0" />
+
         </LinearLayout>
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/tv_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/space_default"
+            android:layout_marginEnd="@dimen/space_default"
+            android:layout_marginBottom="15sp"
+            android:textSize="@dimen/text_default"
+            tools:text="Vagabond sack" />
 
     </LinearLayout>
 
